// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer Snap render Drawer -- props items 1`] = `
<div
  class="ob-drawer ob-drawer--left"
>
  <div
    class="ob-drawer__mask"
    style="display: block; opacity: 0;"
  />
  <div
    class="ob-drawer__content"
    style="opacity: 0; transition: all 195ms cubic-bezier(0.4, 0, 0.6, 1);"
  >
    
    <div
      class="ob-list"
    >
      
      <div
        class="ob-list__item"
      >
        <div
          class="ob-list__item-container"
        >
          
          
          <div
            class="ob-list__item-content item-content"
          >
            <div
              class="item-content__info"
            >
              <div
                class="item-content__info-title"
              >
                Menu A
              </div>
              
            </div>
          </div>
          <div
            class="ob-list__item-extra item-extra"
          >
            
            
            <div
              class="item-extra__icon"
            >
              <div
                class="ob-icon item-extra__icon-arrow ob-icon-chevron-right"
              />
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="ob-list"
    >
      
      <div
        class="ob-list__item"
      >
        <div
          class="ob-list__item-container"
        >
          
          
          <div
            class="ob-list__item-content item-content"
          >
            <div
              class="item-content__info"
            >
              <div
                class="item-content__info-title"
              >
                Menu B
              </div>
              
            </div>
          </div>
          <div
            class="ob-list__item-extra item-extra"
          >
            
            
            <div
              class="item-extra__icon"
            >
              <div
                class="ob-icon item-extra__icon-arrow ob-icon-chevron-right"
              />
            </div>
          </div>
        </div>
      </div>
      
    </div>
    
    <!---->
  </div>
</div>
`;

exports[`Drawer Snap render Drawer -- props show 1`] = `
<div
  class="ob-drawer ob-drawer--left"
>
  <div
    class="ob-drawer__mask"
    style="display: block; opacity: 0;"
  />
  <div
    class="ob-drawer__content"
    style="opacity: 0; transition: all 195ms cubic-bezier(0.4, 0, 0.6, 1);"
  >
    0
    
    
  </div>
</div>
`;

exports[`Drawer Snap render Drawer -- props width 1`] = `
<div
  class="ob-drawer ob-drawer--left"
>
  <div
    class="ob-drawer__mask"
    style="display: block; opacity: 0;"
  />
  <div
    class="ob-drawer__content"
    style="opacity: 0; transition: all 195ms cubic-bezier(0.4, 0, 0.6, 1);"
  >
    0
    
    
  </div>
</div>
`;

exports[`Drawer Snap render initial Drawer 1`] = `<!---->`;
